example: cms files

--- a/example/cms.yaml
+++ b/example/cms.yaml
@@ -19,7 +19,7 @@ backend: "php/thinkphp6-fpm"
 #命令行使用框架的路径，相对于 ./plugin 目录
 commandline: ""
 #数据文件的路径，用逗号','分隔开多个文件
-data: "./example/test_api.yaml"
+data: "./example/cms-admin.yaml"
 #运维环境软件配置插件的目录，相对于 .plugin 目录
 operation: "database/mariadb,http/nginx"
 #数据库存储软件配置插件的目录，相对于 .plugin 目录
