--- a/example/cms.yaml
+++ b/example/cms.yaml
@@ -20,9 +20,23 @@ frontend: "typescript/react17-antd-umi"
 backend: "php/thinkphp6-fpm"
 #命令行使用框架的路径，相对于 ./plugin 目录
 commandline: ""
-#数据文件的路径，用逗号','分隔开多个文件
-data: "./example/cms-admin.yaml"
 #运维环境软件配置插件的目录，相对于 .plugin 目录
 operation: "database/mariadb,http/nginx"
+#数据文件的路径，用逗号','分隔开多个文件
+data: "./example/cms-admin.yaml"
 #数据库存储软件配置插件的目录，相对于 .plugin 目录
-schema: "rdb/mariadb,kv/redis"
+schema:
+  - name: 'cms-mariadb'
+    type: 'rdb/mariadb'
+    username: 'cms'
+    password: 'cms'
+    charset: 'utf8mb4'
+    host: 'localhost'
+    port: '3306'
+  - name: "cms-redis"
+    type: 'kv/redis'
+    username: 'cms'
+    password: 'cms'
+    charset: ''
+    host: 'localhost'
+    port: '6379'
